<resources>
    <string name="app_name">安科小助手</string>
    <string name="news_page">校园动态</string>
    <string name="news_content">新闻详情</string>
    <string name="text_size">字号选择</string>
    <string name="login">登陆</string>
    <string name="login_id">学号</string>
    <string name="login_password">密码</string>
    <string name="exit">退出</string>
    <string name="home">主页</string>
    <string name="info">个人信息</string>
    <string name="name_text">姓名</string>
    <string name="sex_text">性别</string>
    <string name="birthday_text">出生日期</string>
    <string name="grade_text">专业班级: </string>
    <string name="faculty_text">学院: </string>
    <string name="week_num_text">第%d周课程</string>
    <string name="course_num_text">%d</string>
    <string name="book_search">图书搜索</string>
    <string name="recommend_book">推荐阅读</string>
    <string name="search_result">搜索结果</string>
    <string name="refresh_book">换一批</string>
    <string name="search_hint_text">请输入搜索关键字</string>
    <string name="on_loading_text">正在加载…</string>
    <string name="exit_login_text">退出登录</string>
    <string name="version_introduce_text">版本介绍</string>
    <string name="about_us_text">关于我们</string>
    <string name="clear_cache">清理缓存</string>
    <string name="modify_psw_text">修改登录密码</string>
    <string name="version_mark">v%s</string>
    <string name="share_text">分享</string>
    <string name="head_img_text">头像</string>
    <string name="student_id_text">学号</string>
    <string name="college_and_major_text">学院专业</string>
    <string name="nickname_text">昵称</string>
    <string name="phone_num_text">手机号</string>
    <string name="email_text">邮箱</string>
    <string name="save_text">保存</string>
    <string name="input_student_id">请输入学号</string>
    <string name="input_psw_text">请输入密码</string>
    <string name="money_mark">¥%s</string>
    <string name="card_no">卡号：%s</string>
    <string name="card_state">状态：%s</string>
    <string name="current_balance">当前余额：%s元</string>
    <string name="charge_text">充值</string>
</resources>
