<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="8dp"
            android:background="#ddd" />

        <TextView
            android:id="@+id/tv_modify_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="14dp"
            android:text="@string/modify_psw_text"
            android:textColor="#444" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ddd" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ddd" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="8dp"
            android:background="#ddd" />

        <TextView
            android:id="@+id/tv_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="14dp"
            android:text="@string/clear_cache"
            android:textColor="#444" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ddd" />

        <TextView
            android:id="@+id/tv_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="14dp"
            android:text="@string/about_us_text"
            android:textColor="#444" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ddd" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="8dp"
            android:background="#ddd" />

        <TextView
            android:id="@+id/tv_version_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="14dp"
            android:text="@string/version_introduce_text"
            android:textColor="#444" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ddd" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="8dp"
            android:background="#ddd" />

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/exit_login_text"
            android:textColor="#444" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ddd" />
    </LinearLayout>
</RelativeLayout>